tests/pos/moduletrans.scala
//> using options -source 3.2

object m1 {

  class m() {
    def f() = 5
  }
  final val m: m = new m()

}
